tests/snapshots/formatter__roxygen_md_setext_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' First
#' =====
#' Body.
#' Two line
#' heading
#' ------
#' More.
#' @name x
NULL
