tests/snapshots/formatter__roxygen_md_thematic_break_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' Before.
#'
#' ---
#'
#' After.
#'
#' ***
#' @name x
NULL
