tests/snapshots/formatter__roxygen_name_bearing_pulled_up_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @param x The x value.
f <- function(x) x
