tests/snapshots/formatter__roxygen_pipe_prose_reflow_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @param .id `r lifecycle::badge("deprecated")`: convert
#'   `df |> unnest(x, .id = "id")` to `df |> mutate(id = names(x)) |>
#'   unnest(x))`.
NULL
