tests/snapshots/formatter__roxygen_rd_comment_md_reflows_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @md
#' Some prose with a % literal here and a second line here.
#' @name foo
NULL
