tests/snapshots/formatter__roxygen_rd_macro_hangs_under_tag_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @format A list with two items representing 211 observations from 9 variables
#'   \describe{
#'     \item{a}{x}
#'     \item{b}{y}
#'   }
