tests/snapshots/formatter__roxygen_rd_verbatim_not_hung_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @details Some intro prose before the block.
#' \preformatted{
#'   x <- 1
#'     y <- indented_on_purpose
#' }
