tests/snapshots/formatter__roxygen_reflow_long_word_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' See
#' https://example.org/a/very/long/url/that/cannot/be/broken/across/lines/at/all
#' here.
f <- function(x) x
