tests/snapshots/formatter__roxygen_reflow_multi_paragraph_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' The first paragraph is long enough to need rewrapping across more than one
#' output line when it is reflowed to the width.
#'
#' The second paragraph is separate and is likewise long enough that it also
#' wraps independently of the first one above it.
f <- function(x) x
