tests/snapshots/formatter__roxygen_section_multiparagraph_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @details
#' First paragraph short.
#'
#' Second paragraph short.
f <- function() NULL
