tests/snapshots/formatter__roxygen_tag_bail_rd_comment_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @param x text with a % comment here
#' and a continuation line.
#' @name foo
NULL
